--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,18 +11,35 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.29",
+    "@google/generative-ai": "^0.24.1",
     "@repo/ui": "*",
+    "@repo/db": "*",
+    "@trigger.dev/sdk": "^4.3.3",
+    "@vercel/blob": "^2.2.0",
+    "ai": "^6.0.86",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.564.0",
     "next": "16.1.5",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "autoprefixer": "^10.4.24",
+    "dotenv": "^17.3.1",
     "eslint": "^9.39.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.9.2"
   }
 }
