--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://turborepo.dev/schema.json",
   "ui": "tui",
+  "globalEnv": [
+    "MONGODB_URI",
+    "BLOB_READ_WRITE_TOKEN",
+    "GEMINI_API_KEY",
+    "TRIGGER_PROJECT_ID",
+    "VERCEL_OIDC_TOKEN"
+  ],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
