--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -15,6 +15,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22.15.3",
+    "bun-types": "^1.3.3",
     "eslint": "^9.39.1",
     "typescript": "5.9.2"
   },
